# clawly

./: CLAUDE.md  README.md  config.categories.toml  config.default.toml  config.noslop.toml  pyproject.toml
.github/workflows/: ci.yml
src/clawly/: __init__.py  analyzer.py  categories.py  config.py  evaluator.py  events.py  main.py  model.py  pipeline.py  utils.py
src/clawly/presets/: creative_writing.json  default.json  minimal.json
src/clawly/web/: app.py
src/clawly/web/pages/: compare_page.py  config_page.py  export_page.py  research_page.py  results_page.py  run_page.py
tests/: conftest.py  test_categories.py  test_config.py  test_events.py  test_pipeline_guards.py  test_utils.py
