[project]
name = "clawly"
version = "1.2.0"
description = "Automatic LLM abliteration with selective category-based uncensoring and a Gradio Web UI"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Philipp Emanuel Weidmann", email = "pew@worldwidemann.com" }
]
requires-python = ">=3.10"
keywords = [
    "llm",
    "transformer",
    "abliteration",
    "uncensoring",
    "lora",
    "refusal",
    "optuna",
    "peft",
    "huggingface",
    "gradio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU",
    "Environment :: WebEnvironment",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "accelerate~=1.10",
    "bitsandbytes~=0.45",
    "datasets~=4.0",
    "hf-transfer~=0.1",
    "huggingface-hub~=0.34",
    "kernels~=0.11",
    "optuna~=4.5",
    "peft~=0.14",
    "psutil~=7.1",
    "pydantic-settings~=2.10",
    "questionary~=2.1",
    "rich~=14.1",
    "transformers~=4.57",
]

[project.optional-dependencies]
research = [
    "geom-median~=0.1",
    "imageio~=2.37",
    "matplotlib~=3.10",
    "numpy~=2.2",
    "pacmap~=0.8",
    "scikit-learn~=1.7",
]
web = [
    "gradio~=5.0",
    "plotly~=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "ty>=0.0.5",
]

[project.urls]
Homepage = "https://github.com/luisoala/clawly"
Documentation = "https://github.com/luisoala/clawly#readme"
Repository = "https://github.com/luisoala/clawly.git"
Issues = "https://github.com/luisoala/clawly/issues"
Changelog = "https://github.com/luisoala/clawly/releases"

[project.scripts]
clawly = "clawly.main:main"
clawly-web = "clawly.web.app:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "clawly"
